# _youtube_ai_app_v3.0

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Activating Real Revenue.md  Dockerfile  Makefile  README.md  cloudbuild.backend.image.yaml  cloudbuild.frontend_v3.image.yaml  cloudbuild.frontend_vite.image.yaml  cloudbuild.yaml  debug_api_dashboard.py  earnings.json  earnings_checkpoint_v1.json  growth_engine.db  main.py  openapi_dump.json  pyproject.toml  start_chimera.py  youtube_ai.db
ai_modules/: __init__.py  advanced_analytics_utils.py
app/: README.md  frontend_v3
apps/: README.md
autonomax/: __init__.py  api_trigger.json  command_center.py  execution_tracker.json  genesis.py  orchestrator.py  registry.py
backend/: Dockerfile  api_enhanced.py  automated_pretopics.py  bash_builddeploy.sh  build_frontend.sh  cloudbuild.yaml  database_enhanced.py  deneme_app1.py  gcloud_deploy.sh.txt  health.py  logger.py  main.py  main.py.txt  main2.py  metrics.py  payoneer.py  render_backend_deploy.yaml  requirements.txt  roi.py  roi_estimator.py  run_docker.sh  script_generator.py  start_full_stack.sh  test_api.py  test_payment_system.py  test_request.py  thumbnail_generator.py  tts_generator.py  utils.py  youtube_logic.py  youtube_oauth.py  youtube_upload.py
config/: cloudrun.autonomax.env.example  cloudrun.backend.env.example  cloudrun.frontend.env.example  cloudrun.youtube.env.example  cloudrun.youtube.frontend.env.example  env.full.example  env.template  shopier.env.example
docs/: AI_FRAMEWORK_ARCHITECTURE.md  ARCHITECTURE.md  AUTONOMOUS_MARKETING_EXECUTION_PLAN.md  BUSINESS_FLOW_HANDOVER.md  BUSINESS_GROWTH_ACCELERATOR_TOOLKIT.md  CHECKPOINT_V1_REVENUE_ACTIVE.md  COMMERCIALIZATION_EXECUTION_SUMMARY.md  DASHBOARD_FUNCTIONALITY_GUIDE.md  DEVELOPMENT_STRATEGY.md  ENVIRONMENT_VARIABLES.md  EXECUTION_JOBLOAD.md  EXECUTION_ROADMAP_FIRST_TRANSFER.md  FIRST_TRANSFER_PROOF_REPORT.md  GROWTH_SPRINT_PLAN.md  KPI_EXECUTION_ENGINE.md  (+15 more)
(+858 files in other folders)
